# dev_container_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  skills.md
.devcontainer/: Dockerfile  devcontainer.json  setup_codex.sh  setup_starship.sh  setup_uv.sh
code/: 02_img_feat_extract_test_photo_generation.ipynb  app copy.py  app.py  embedding_viewer.py  example.ipynb  example.py
code/__marimo__/session/: app.py.json  ebedding_viewer.py.json  embedding_viewer.py.json
